--- a/Chess/MainWindow.xaml
+++ b/Chess/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="Chess.MainWindow"
+        x:Name="StartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -135,9 +136,12 @@
         <Border Grid.Column = "8" Grid.Row="7" Background="#FF494949"/>
         <Border Grid.Column = "8" Grid.Row="8" Background="#FF494949"/>
 
-        <TextBlock x:Name="GameNote" Grid.Column = "9" Grid.Row="0"   TextTrimming="WordEllipsis" TextWrapping="Wrap" Grid.RowSpan="7" Background="#FF3A3939" Foreground="White" FontSize="14" FontFamily="Cascadia Code"/>
-        <TextBlock x:Name="RealTimeTB" Grid.Column = "9" Grid.Row="9"   TextTrimming="WordEllipsis" TextWrapping="Wrap" Grid.RowSpan="8" Background="#FF3A3939" Foreground="White" FontSize="14" FontFamily="Cascadia Code" Loaded="RealTimeTB_Loaded"/>
+        <TextBlock x:Name="GameNote" Grid.Column = "9" Grid.Row="0"   TextTrimming="WordEllipsis" TextWrapping="Wrap" Grid.RowSpan="6" Background="#FF3A3939" Foreground="White" FontSize="14" FontFamily="Cascadia Code"/>
+        <TextBlock x:Name="RealTimeTB" Grid.Column = "9" Grid.Row="9"   TextTrimming="WordEllipsis" TextWrapping="Wrap" Background="#FF3A3939" Foreground="White" FontSize="14" FontFamily="Cascadia Code" Loaded="RealTimeTB_Loaded"/>
 
+        <Border Grid.Column = "9" Grid.Row="6" Background="#FF3A3939"/>
+            <Button x:Name="ScreenSizeButton" Grid.Column = "9" Grid.Row="6" Margin="8" Background="#FF408AF6" Click="FullScreenButton_Click" Content="Full screen" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
+            
         <Border Grid.Column = "9" Grid.Row="7" Background="#FF3A3939"/>
         <Button x:Name="ExitButton" Grid.Column = "9" Grid.Row="7" Margin="8" Background="#FFF64040" Click="ExitButton_Click" Content="Exit" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
 
