Changed Close button in MainWindow. Now it Open MainMenu Window, added ability to move MainMenu window when mousedown

--- a/Chess/Windows/MainWindow.xaml
+++ b/Chess/Windows/MainWindow.xaml
@@ -9,7 +9,8 @@
         Width="750"
         Background="#FF2F2F2F"
         Title="MainWindow"
-        WindowStyle="None" MouseDown="Window_MouseDown">
+        WindowStyle="None"
+        MouseDown="Window_MouseDown">
     <Viewbox Stretch="Uniform">
         <Grid x:Name="GameField" MouseLeftButtonDown="GameField_MouseLeftButtonDown">
         <Grid.ColumnDefinitions>
@@ -143,7 +144,7 @@
             <Button x:Name="ScreenSizeButton" Grid.Column = "9" Grid.Row="6" Margin="8" Background="#FF408AF6" Click="FullScreenButton_Click" Content="Full screen" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
             
         <Border Grid.Column = "9" Grid.Row="7" Background="#FF3A3939"/>
-        <Button x:Name="ExitButton" Grid.Column = "9" Grid.Row="7" Margin="8" Background="#FFF64040" Click="ExitButton_Click" Content="Exit" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
+        <Button x:Name="MenuButton" Grid.Column = "9" Grid.Row="7" Margin="8" Background="#FF408AF6" Click="MenuButton_Click" Content="Menu" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
 
         <Image x:Name="BlackPawn0" Grid.Column = "0" Grid.Row="1" Stretch="Fill" Source="C:\Users\Illy\Desktop\НУЛП\BlackPawn.png" MouseLeftButtonDown="BlackPawn0_MouseLeftButtonDown"/>
         <Image x:Name="BlackPawn1" Grid.Column = "1" Grid.Row="1" Stretch="Fill" Source="C:\Users\Illy\Desktop\НУЛП\BlackPawn.png" MouseLeftButtonDown="BlackPawn1_MouseLeftButtonDown"/>
