--- a/Chess/Windows/MainMenu.xaml
+++ b/Chess/Windows/MainMenu.xaml
@@ -6,7 +6,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chess.Windows"
         mc:Ignorable="d"
-        Title="MainMenu" Height="450" Width="800">
+        Title="MainMenu" Height="450" Width="800"
+        MouseDown="Window_MouseDown">
     <Grid x:Name="GridMainMenu" Background="#FF3A3939">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
