--- a/Chess/Windows/Options.xaml
+++ b/Chess/Windows/Options.xaml
@@ -22,12 +22,14 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        <CheckBox x:Name="ShowAvailableTurnsButton" Grid.Column="1" Grid.Row="1" Margin="20"  Background="#FF408AF6" Content="ShowAvailableTurns" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Checked="ShowAvailableTurnsButton_Checked" Unchecked="ShowAvailableTurnsButton_Unchecked" />
-        <CheckBox x:Name="ShowRealTimeButton" Grid.Column="1" Grid.Row="2" Margin="20" Background="#FF408AF6" Content="ShowRealTime" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Unchecked="ShowRealTimeButton_Unchecked" Checked="ShowRealTimeButton_Checked" />
-        <Button x:Name="ScreenSizeButton" Grid.Column="1" Grid.Row="3" Margin="8" Background="#FF408AF6" Content="Window" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="ScreenSizeButton_Click"/>
-        <Button x:Name="BackButton" Grid.Column="1" Grid.Row="4" Margin="8" Background="#FF408AF6" Content="Back" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="BackButton_Click"/>
+        <CheckBox x:Name="ReverseBoardButton" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="20"  Background="#FF408AF6" Content="Reverse board for each player" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" />
+        <CheckBox x:Name="ShowAvailableTurnsButton" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="20"  Background="#FF408AF6" Content="Show available turns" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Checked="ShowAvailableTurnsButton_Checked" Unchecked="ShowAvailableTurnsButton_Unchecked" />
+        <CheckBox x:Name="ShowRealTimeButton" Grid.Column="1" Grid.Row="3" Margin="20" Background="#FF408AF6" Content="Show real time" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Unchecked="ShowRealTimeButton_Unchecked" Checked="ShowRealTimeButton_Checked" />
+        <Button x:Name="ScreenSizeButton" Grid.Column="1" Grid.Row="4" Margin="8" Background="#FF408AF6" Content="Window" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="ScreenSizeButton_Click"/>
+        <Button x:Name="BackButton" Grid.Column="1" Grid.Row="5" Margin="8" Background="#FF408AF6" Content="Back" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="BackButton_Click"/>
         
     </Grid>
 </Window>
