--- a/Chess/Windows/Options.xaml
+++ b/Chess/Windows/Options.xaml
@@ -25,7 +25,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <CheckBox x:Name="ReverseBoardButton" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="20"  Background="#FF408AF6" Content="Reverse board for each player" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" />
+        <CheckBox x:Name="ReverseBoardButton" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="20"  Background="#FF408AF6" Content="Reverse board for each player" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Checked="ReverseBoardButton_Checked" Unchecked="ReverseBoardButton_Unchecked" />
         <CheckBox x:Name="ShowAvailableTurnsButton" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="20"  Background="#FF408AF6" Content="Show available turns" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Checked="ShowAvailableTurnsButton_Checked" Unchecked="ShowAvailableTurnsButton_Unchecked" />
         <CheckBox x:Name="ShowRealTimeButton" Grid.Column="1" Grid.Row="3" Margin="20" Background="#FF408AF6" Content="Show real time" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Unchecked="ShowRealTimeButton_Unchecked" Checked="ShowRealTimeButton_Checked" />
         <Button x:Name="ScreenSizeButton" Grid.Column="1" Grid.Row="4" Margin="8" Background="#FF408AF6" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="ScreenSizeButton_Click"/>
