--- a/Chess/Windows/MainMenu.xaml
+++ b/Chess/Windows/MainMenu.xaml
@@ -1,15 +1,25 @@
 ﻿<Window x:Class="Chess.Windows.MainMenu"
-        x:Name="MainMenuWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Chess.Windows"
-        mc:Ignorable="d"
-         WindowState="Maximized"
-        Title="MainMenu" Height="450" Width="800"
-        WindowStyle="None"
-        MouseDown="Window_MouseDown">
+        
+    x:Name="MainMenuWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Chess.Windows"
+    mc:Ignorable="d"
+        WindowState="Maximized"
+    Title="MainMenu" Height="450" Width="800"
+    WindowStyle="None"
+    MouseDown="Window_MouseDown">
+    
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid x:Name="GridMainMenu" Background="#FF3A3939">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -26,8 +36,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Text="Chess" Margin="25" Foreground="White" FontSize="45" FontWeight="Normal" FontFamily="Arial Black" TextAlignment="Center"/>
-        <Button x:Name="StartGameButton" Grid.Column="1" Grid.Row="3" Margin="8" Background="#FF408AF6" Content="Singleplayer" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="StartGameButton_Click"/>
-        <Button x:Name="OptionsButton" Grid.Column="1" Grid.Row="4" Margin="8" Background="#FF408AF6" Content="Options" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="OptionsButton_Click"/>
-        <Button x:Name="ExitButton" Grid.Column="1" Grid.Row="5" Margin="8" Click="ExitButton_Click" Background="#FFF64040" Content="Exit" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
+        <Button x:Name="StartGameButton" Style="{StaticResource BlueButtonStyle}" Grid.Column="1" Grid.Row="3" Margin="8" Content="Singleplayer" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="StartGameButton_Click"/>
+        <Button x:Name="OptionsButton" Style="{StaticResource BlueButtonStyle}" Grid.Column="1" Grid.Row="4" Margin="8"  Content="Options" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black" Click="OptionsButton_Click"/>
+        <Button x:Name="ExitButton" Style="{StaticResource RedButtonStyle}" Grid.Column="1" Grid.Row="5" Margin="8" Click="ExitButton_Click" Content="Exit" Foreground="White" FontSize="25" FontWeight="Normal" FontFamily="Arial Black"/>
     </Grid>
 </Window>
