Added new folder for XAML files, changed their directory

--- a/Chess/XAML/Windows/MainMenu.xaml
+++ b/Chess/XAML/Windows/MainMenu.xaml
@@ -15,7 +15,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles.xaml" />
+                <ResourceDictionary Source="/XAML/ResourceDictionaries/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
